--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -46,7 +46,7 @@
     <section class="hero">
       <div class="hero__container">
         <div class="hero__text">Make your life easier!</div>
-        <button class="profile__name" id="profileBtn">Sign In</button>
+        <button class="hero__button modalBtn">Sign In</button>
       </div>
     </section>
   </main>
