--- a/client/pages/register.html
+++ b/client/pages/register.html
@@ -41,7 +41,7 @@
 
   <main class="main">
     <div class="main__container">
-      <form action="/register" method="post" class="form">
+      <form action="/register" method="post" class="form form__register">
         <div class="form__title">Welcome</div>
         <div class="form__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quam duis vitae curabitur amet,
           fermentum lorem. </div>
@@ -52,14 +52,14 @@
               E-mail
               <span class="material-symbols-outlined">emergency</span>
             </label>
-            <input type="email" id="email" placeholder="yourmail@gmail.com" name="email" required>
+            <input type="email" id="email" placeholder="yourmail@gmail.com" name="email" id="emailReg" required>
           </div>
           <div class="form__input">
             <label for="password">
               Password
               <span class="material-symbols-outlined">emergency</span>
             </label>
-            <input type="password" id="password" name="password" placeholder="•••••••••••••" required>
+            <input type="password" id="password" name="password" placeholder="•••••••••••••" id="passwordReg" required>
           </div>
           <!-- <div class="form__input">
             <label for="con-password">Confirm password<span class="material-symbols-outlined">
