--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -33,7 +33,7 @@
         <a href="#" class="menu__link">Blog</a>
       </div>
 
-      <a href="#" class="header__profile profile modalBtn">
+      <a class="header__profile profile modalBtn">
         <div class="profile__icon">
           <span class="material-symbols-outlined">account_circle</span>
         </div>
@@ -122,7 +122,7 @@
     </div>
   </div>
 
-  <script src="/js/index.js"></script>
+  <script src="../js/index.js"></script>
 </body>
 
 </html>
