--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -42,7 +42,11 @@
 
       <div class="header__actions">
         <a class="signinBtn">singin</a>
-        <a class="registerBtn">register</a>
+        <a class="registerBtn">register
+          <span class="material-symbols-outlined">
+            logout
+          </span>
+        </a>
       </div>
     </div>
   </header>
